--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-particles": "^2.3.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.4",
     "tsparticles": "^2.3.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
