--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,11 @@
       "type": "image/x-icon"
     },
     {
+      "src": "logo16.png",
+      "type": "image/png",
+      "sizes": "16x16"
+    },
+    {
       "src": "logo32.png",
       "type": "image/png",
       "sizes": "32x32"
@@ -20,6 +25,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#333",
-  "background_color": "radial-gradient(circle, #333 0%, #1e1e1e 100%)"
+  "theme_color": "#333333",
+  "background_color": "radial-gradient(circle, #333333 0%, #1e1e1e 100%)"
 }
