--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ REACT_APP_STORAGE_BUCKET = "jozefmullportfolio.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID = "873340067050"
 REACT_APP_APP_ID = "1:873340067050:web:890c33b9ccf66529344b93"
 REACT_APP_MEASURMENT_ID = "G-13HQBKBGJP"
+REACT_APP_EMAIL_JS_SERVICE_ID = "service_ztexz79"
+REACT_APP_EMAIL_JS_TEMPLATE_ID = "template_d54kzgg"
+REACT_APP_EMAIL_JS_PUBLIC_KEY = "Lg6m-mEJdfm2c3Dse"
