--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_MEASURMENT_ID = "G-13HQBKBGJP"
 REACT_APP_EMAIL_JS_SERVICE_ID = "service_ztexz79"
 REACT_APP_EMAIL_JS_TEMPLATE_ID = "template_d54kzgg"
 REACT_APP_EMAIL_JS_PUBLIC_KEY = "Lg6m-mEJdfm2c3Dse"
+REACT_APP_GA_TRACKING_ID = "UA-237009930-2"
