--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-particles": "^2.3.3",
