--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-particles": "^2.3.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.5"
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-lazy-load-image-component": "^1.5.2"
   }
 }
